tests/ui/lint/snapshots/fix_unnecessary_min_or_max.snap
---
source: tests/ui/lint/fixes.rs
---
pub fn f(x: int) -> int {
  min(x, x)
}
=== fixed ===
pub fn f(x: int) -> int {
  x
}
