tests/ui/lint/snapshots/fix_unnecessary_mut.snap
---
source: tests/ui/lint/fixes.rs
---
fn main() {
  let mut x = 5
  let _ = x
}
=== fixed ===
fn main() {
  let x = 5
  let _ = x
}
