tests/ui/lint/snapshots/fix_unnecessary_raw_string.snap
---
source: tests/ui/lint/fixes.rs
---
fn main() {
  let msg = r"hello";
  let _ = msg
}
=== fixed ===
fn main() {
  let msg = "hello";
  let _ = msg
}
