tests/ui/lint/snapshots/fix_unnecessary_reference.snap
---
source: tests/ui/lint/fixes.rs
---
pub fn foo(x: Ref<int>) {
  let _ = &x;
}
=== fixed ===
pub fn foo(x: Ref<int>) {
  let _ = x;
}
