tests/ui/lint/snapshots/fix_unnecessary_return.snap
---
source: tests/ui/lint/fixes.rs
---
fn five() -> int {
  return 5
}
=== fixed ===
fn five() -> int {
  5
}
