tests/ui/lint/snapshots/fix_unprefixed_fstring.snap
---
source: tests/ui/lint/fixes.rs
---
fn main() {
  let name = "world";
  let msg = "hello {name}";
  let _ = name;
  let _ = msg
}
=== fixed ===
fn main() {
  let name = "world";
  let msg = f"hello {name}";
  let _ = name;
  let _ = msg
}
