tests/ui/lint/snapshots/fix_unused_import.snap
---
source: tests/ui/lint/fixes.rs
---
import "go:fmt"

fn main() {
  let _ = 5
}
=== fixed ===
fn main() {
  let _ = 5
}
