tests/ui/lint/snapshots/fix_unused_import_with_alias.snap
---
source: tests/ui/lint/fixes.rs
---
import f "go:fmt"

fn main() {
  let _ = 5
}
=== fixed ===
fn main() {
  let _ = 5
}
