tests/ui/lint/snapshots/float_cmp_alias.snap
---
source: tests/ui/lint/mod.rs
---
  [warning] Exact float comparison
   ╭─[test.lis:6:11]
 5 │   let b: Score = 2.0
 6 │   let _ = a == b
   ·           ───┬──
   ·              ╰── floats compared with `==`
 7 │ }
   ╰────
  help: Floating-point results are rarely bit-exact, so `==` and `!=` may not behave as intended. Compare within a tolerance instead, e.g. `math.Abs(a - b) < c` · code: [lint.float_cmp]
